[package]
name = "id_token_verifier"
version = "0.1.7"
edition = "2024"
license = "MIT"
authors = ["Daniyil Yevtyushkin <d.yevtyushkin.dev@gmail.com>"]
description = "OpenID Connect ID Token Verifier In Rust"
repository = "https://github.com/yevtyushkin/id_token_verifier"
homepage = "https://github.com/yevtyushkin/id_token_verifier"
documentation = "https://docs.rs/id_token_verifier"
readme = "README.md"
categories = ["authentication", "web-programming"]
keywords = ["openidconnect", "id_token", "auth", "configuration", "jwks"]
exclude = ["examples/*", "tests/*", "*.md"]

[dependencies]
backoff-config = "0.1.4"
backon = "1.6.0"
bon = "3.8.2"
derive_more = { version = "2.1.1", features = ["debug", "display"] }
duration-str = { version = "0.19.0", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }
tokio = { version = "1.49.0", features = ["sync"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
chrono = "0.4.43"
figment = { version = "0.10.19", features = ["env", "test"] }
rsa = { version = "0.9.10" }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v7"] }

[features]
default = []
tracing = ["dep:tracing"]
